objects/JunoDoc__Junodoc_Post_Trigger_Actions__c/JunoDoc__Junodoc_Post_Trigger_Actions__c.object-meta.xml
<CustomObject>
    <label>Junodoc Post Trigger Actions</label>
    <nameField>
        <label>Junodoc Post Trigger Actions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Junodoc Post Trigger Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>