objects/JunoDoc__Junodoc_Post_Trigger_Actions__c/fields/JunoDoc__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Field_Name__c</fullName>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>