objects/JunoDoc__Junodoc_Post_Trigger_Actions__c/fields/JunoDoc__Junodoc_Batch_Settings__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Junodoc_Batch_Settings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Junodoc Batch Settings</label>
    <referenceTo>JunoDoc__Junodoc_Batch_Settings__c</referenceTo>
    <relationshipLabel>Junodoc Post Trigger Actions</relationshipLabel>
    <relationshipName>Junodoc_Post_Trigger_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>