objects/JunoDoc__Junodoc_Post_Trigger_Actions__c/fields/JunoDoc__Value__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Value__c</fullName>
    <label>Value</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>